Fixed many findings